Save current state before trying make crud

--- a/templates/main/registration.html.twig
+++ b/templates/main/registration.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<h1>this is a test in twig</h1>
+    <twig:PetForm :pet="pet"/>
 {%  endblock %}
