--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,8 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <div class="flex flex-col items-center min-h-screen bg-gray-300 py-24">
+            {% block body %}{% endblock %}
+        </div>
     </body>
 </html>
