--- a/templates/form/custom_theme.html.twig
+++ b/templates/form/custom_theme.html.twig
@@ -1,25 +1,18 @@
-<fieldset>
-    {% if label is defined %}
-        <legend class="mb-2 font-semibold text-gray-700">{{ label }}</legend>
-    {% endif %}
-    <div class="flex flex-row">
+{% block custom_choice_widget %}
+    <div class="my-custom-choice flex flex-row">
         <div role="radiogroup" class="flex border border-blue-800 rounded-sm overflow-hidden divide-x divide-blue-800 h-10">
-            {% for option in options %}
-
-                {# Make a unique id for accessibility #}
-                {% set id = name ~ '-' ~ option.value|lower %}
-
+            {% for child in form %}
                 <div class="flex-1">
                     <input
                         type="radio"
-                        id="{{ id }}"
-                        name="{{ name }}"
-                        value="{{ option.value }}"
+                        id="{{ child.vars.id }}"
+                        name="{{ child.vars.full_name }}"
+                        value="{{ child.vars.value }}"
+                        {% if child.vars.checked %}checked="checked"{% endif %}
                         class="peer sr-only"
-                        data-model="pet.type"
                     />
                     <label
-                        for="{{ id }}"
+                        for="{{ child.vars.id }}"
                         class="flex h-10 w-full items-center justify-center cursor-pointer px-4
                        transition-colors duration-200
                        text-blue-800
@@ -27,9 +20,18 @@
                        peer-checked:bg-blue-800 peer-checked:text-white
                        peer-focus-visible:ring-2 peer-focus-visible:ring-blue-800"
                     >
-                        {{ option.label }}
+                        {{ child.vars.label }}
                     </label>
                 </div>
             {% endfor %}
+        </div>
     </div>
-</fieldset>
+{% endblock %}
+
+{% block custom_enum_widget %}
+    {{ block('custom_choice_widget') }}
+{% endblock %}
+
+{% block custom_entity_widget %}
+    {{ block('custom_choice_widget') }}
+{% endblock %}
