--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,8 +11,9 @@
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
     </head>
-    <body>
-        <div class="flex flex-col items-center min-h-screen bg-gray-300 py-24">
+    <body class="bg-gray-50">
+        <div class="bg-white h-[80px] w-full"></div>
+        <div class="flex flex-col items-center min-h-screen py-6">
             {% block body %}{% endblock %}
         </div>
     </body>
