--- a/templates/components/Button.html.twig
+++ b/templates/components/Button.html.twig
@@ -1,5 +1,5 @@
 <button{{ attributes.defaults({
-    class: 'px-4 py-2 w-full border border-transparent text-sm font-medium rounded-md text-white bg-blue-900 hover:bg-blue-950'
+    class: 'px-4 py-2 w-full h-12.5 border border-transparent text-sm font-medium rounded-md text-white bg-blue-900 hover:bg-blue-950'
 }) }}>
     {% block content %}{% endblock %}
 </button>
