--- a/templates/pet/show.html.twig
+++ b/templates/pet/show.html.twig
@@ -3,40 +3,36 @@
 {% block title %}Pet{% endblock %}
 
 {% block body %}
-    <h1>Pet</h1>
+    <div class="w-full max-w-[730px] bg-white px-6 py-10 shadow-sm rounded-lg">
+        <div class="flex items-center mb-8">
+            <div class="rounded-full text-white w-20 h-20 flex items-center justify-center bg-blue-950 p-3">
+                <twig:ux:icon name="mdi:paw" />
+            </div>
+            <div class="text-2xl ml-8 text-blue-950">Details about {{ pet.name }}</div>
+        </div>
+        <div class="flex flex-col text-blue-950 gap-2 font-medium">
+            <div class="flex">
+                <div class="w-1/2">Pet Name</div>
+                <div class="w-1/2">{{ pet.name|capitalize }}</div>
+            </div>
+            <div class="flex">
+                <div class="w-1/2">Pet Type</div>
+                <div class="w-1/2">{{ pet.type.name|capitalize }}</div>
+            </div>
+            <div class="flex">
+                <div class="w-1/2">Breed</div>
+                <div class="w-1/2">{{ pet.breed.name }}</div>
+            </div>
+            <div class="flex">
+                <div class="w-1/2">Sex</div>
+                <div class="w-1/2">{{ pet.sex.value|capitalize }}</div>
+            </div>
+            <div class="flex">
+                <div class="w-1/2">Age</div>
+                <div class="w-1/2">8</div>
+            </div>
+        </div>
+    </div>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ pet.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ pet.name }}</td>
-            </tr>
-            <tr>
-                <th>Birthdate</th>
-                <td>{{ pet.birthdate ? pet.birthdate|date('Y-m-d') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Sex</th>
-                <td>{{ pet.sex }}</td>
-            </tr>
-            <tr>
-                <th>BirthdayIsKnown</th>
-                <td>{{ pet.birthdayIsKnown ? 'Yes' : 'No' }}</td>
-            </tr>
-            <tr>
-                <th>CustomBreedName</th>
-                <td>{{ pet.customBreedName }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_pet_index') }}">back to list</a>
-
-    <a href="{{ path('app_pet_edit', {'id': pet.id}) }}">edit</a>
-
-    {{ include('pet/_delete_form.html.twig') }}
+    <a href="{{ path('app_pet_new') }}">Register another pet</a>
 {% endblock %}
